fix z-index for copyright

--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -202,7 +202,7 @@ button {
    position: absolute;
    bottom: 0.5em;
    right: 1.2em;
-   opacity: 0.8;
+   z-index: 2;
 
    &__text {
       font-size: 1.4rem;
